--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,11 @@
-coos
-<p>login works!</p>
+<div id="panel">
+    <form (ngSubmit)="onSubmit()">
+    <label for="username">Nazwa użytkownika:</label>
+    <input [(ngModel)]="login.login" type="text" id="username" name="username">
+    <label for="password">Hasło:</label>
+    <input [(ngModel)]="login.password" type="password" id="password" name="password">
+    <div id="lower">
+    <button mat-raised-button color="primary" type="submit">Submit</button>
+    </div>
+    </form>
+</div>
