--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="navigation">
+  <app-navigation></app-navigation>
+</div>
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
