--- a/FE/src/app/core/pages/login/login.component.css
+++ b/FE/src/app/core/pages/login/login.component.css
@@ -1,16 +1,27 @@
 .panel {
-  width: 400px;
+  width: 250px;
   font: 14px;
   text-align: center;
 }
 
 label {
   margin: 15px 0px 5px 0px;
-  color: #696969;
   font-size: 14px;
+  color: black;
   text-shadow: 0 0 1px silver;
 }
 
 .radio-inline {
   margin: 15px 15px 0 15px;
+}
+
+.text-option {
+  text-decoration: none;
+  color: var(--light-blue);
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.btn-primary {
+  margin: 25px 0;
 }
