--- a/FE/src/app/core/pages/login/login.component.html
+++ b/FE/src/app/core/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div id="panel">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="username">Username:</label>
+      <label for="username">Nazwa użytkownika:</label>
       <input
         id="username"
         type="text"
@@ -11,7 +11,7 @@
     </div>
 
     <div class="form-group">
-      <label for="password">Password:</label>
+      <label for="password">Hasło:</label>
       <input
         id="password"
         type="password"
@@ -19,8 +19,9 @@
         formControlName="password"
       />
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Zaloguj</button>
   </form>
+  <a class="text-option" (click)="goToLoginPage()"> Nie masz konta? Zarejestruj się!</a>
 </div>
 
 <!-- do ogarniecia, ez [DOM] Input elements should have autocomplete attributes (suggested: "current-password"): (More info: https://goo.gl/9p2vKq) <input _ngcontent-opc-c13 id=​"password" type=​"password" formcontrolname=​"password" class=​"form-control ng-touched ng-dirty ng-valid" ng-reflect-name=​"password">​ -->
