--- a/FE/src/app/core/pages/registration/registration.component.css
+++ b/FE/src/app/core/pages/registration/registration.component.css
@@ -5,12 +5,24 @@
 }
 
 label {
-  margin: 15px 0px 5px 0px;
-  color: #696969;
+  margin: 10px 0px 3px 0px;
   font-size: 14px;
+  color: black;
   text-shadow: 0 0 1px silver;
 }
 
 .radio-inline {
-  margin: 15px 15px 20px 15px;
+  margin: 15px 15px 0px 15px;
+}
+
+.text-option {
+  text-decoration: none;
+  color: var(--light-blue);
+  font-size: 12px;
+  cursor: pointer;
+}
+
+
+.btn-primary {
+  margin: 25px 0;
 }
