--- a/FE/src/app/core/pages/registration/registration.component.html
+++ b/FE/src/app/core/pages/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="panel">
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="name">Name:</label>
+      <label for="name">Imię:</label>
       <input
         id="name"
         type="text"
@@ -11,7 +11,7 @@
     </div>
 
     <div class="form-group">
-      <label for="surname">Second name:</label>
+      <label for="surname">Nazwisko:</label>
       <input
         id="surname"
         type="text"
@@ -30,7 +30,7 @@
     </div>
 
     <div class="form-group">
-      <label for="username">Username:</label>
+      <label for="username">Nazwa użytkownika:</label>
       <input
         id="username"
         type="text"
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-group">
-      <label for="password">Password:</label>
+      <label for="password">Hasło:</label>
       <input
         id="password"
         type="password"
@@ -60,7 +60,7 @@
             value="Admin"
             required
           />
-          Admin
+          Pracownik
         </label>
         <label class="radio-inline">
           <input
@@ -71,13 +71,14 @@
             value="User"
             required
           />
-          User
+          Student
         </label>
       </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary">Zarejestruj</button>
   </form>
+  <a class="text-option" (click)="goToLoginPage()"> Masz już konto? Zaloguj się!</a>
 </div>
 
 
