--- a/FE/src/styles.css
+++ b/FE/src/styles.css
@@ -1,18 +1,73 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/fonts/Lato-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/fonts/Lato-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/fonts/Lato-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/fonts/Lato-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
 
 :root {
-  --blue-primary: #0d6efd;
+  --darker-blue: #15375c;
+  --dark-blue: #0e3c6e;
+  --usual-blue: #0366d0;
+  --light-blue: #1681f5;
+  --usual-yellow: #f7b500;
+  --dark-yellow: #835b03;
+  --white-primary: #fff;
 }
 
 html,
 body {
+  background: url("assets/bg.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100%;
-  margin: 0;
-  font-family: "Lato", sans-serif;
+  margin: 0px;
+  color: #000;
+  font-family: 'Lato', sans-serif;
   overflow: hidden; /*static container, cant overflow: ;*/
+}
+
+.mat-button {
+  font-family: 'Lato', sans-serif;
+}
+
+.mat-body, .mat-body-2, .mat-typography .mat-body, .mat-typography .mat-body-2, .mat-typography {
+  font: 400 14px/20px "Lato", sans-serif;
+  letter-spacing: .0178571429em;
+  color: #000;
+
 }
 
 .heading {
   font-family: "Lato", sans-serif;
+}
+
+input {
+  text-align: center;
 }
