--- a/FE/src/app/core/components/navigation/navigation.component.html
+++ b/FE/src/app/core/components/navigation/navigation.component.html
@@ -1,13 +1,12 @@
 <div class="nav-container">
-    <img src="/assets/logo.png" alt="logo" />
-  
-    <div class="nav-items" *ngFor="let item of navigation | keyvalue">
-      <a
-        [ngClass]="router.url == item.value.path ? 'active' : ''"
-        [routerLink]="item.value.path"
-        >{{ item.value.name }}</a
-      >
-    </div>
-    <a routerLink="/homepage"> <span class="material-symbols-outlined"> logout </span></a>
+  <img src="/assets/logo.png" alt="logo" />
+
+  <div class="nav-items" *ngFor="let key of navigation">
+    <a
+      [ngClass]="router.url == NAVIGATION[key].path ? 'active' : ''"
+      [routerLink]="NAVIGATION[key].path"
+      >{{ NAVIGATION[key].name }}</a
+    >
   </div>
-  
+  <a routerLink="#"> <span class="material-symbols-outlined"> logout </span></a>
+</div>
